[workspace]
members = ["crates/*", "dbn-mbo-lib"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4.42" }
anyhow = { version = "1.0.100" }
dbn = { version = "0.44.0" }
dbn-cli = { version = "0.44.0" }
dbn-macros = { version = "0.44.0" }
fallible-streaming-iterator = { version = "0.1.9" }
indexmap = { version = "2.12.1" }
rand = { version = "0.9.2" }
zstd = { version = "0.13.3" }
cme_mbo_engine = { path = "crates/cme_mbo_engine", version = "0.1.0" }
cme_mbo_graphing = { path = "crates/cme_mbo_graphing", version = "0.1.0" }
cme_mbo_internal = { path = "crates/cme_mbo_internal", version = "0.1.0" }
pyo3 = { version = "0.27.2" }
crossbeam = { version = "0.8.4" }
